# s5

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt  requirements_gpu.txt  run_train.py  tempfile-pf-train-3-5a372c90-3931484-61d6143d0fef3  tempfile-pf-train-3-cb06725a-3945303-61d616bfd8f45  tempfile-pf-train-3-cb06725a-3945303-61d616bfd99eb
s5/: dataloading.py  kernel_plots.py  layers.py  lru.py  rares_layers.py  recurrent_layers.py  rotrnn.py  seq_model.py  simple_rotrnn.py  simple_rotrnn_test.py  ssm.py  ssm_init.py  toy.py  toy_learning.py  train.py  train_helpers.py
